Lab8 comments added

--- a/Lab8/Lab8_BNB.ipynb
+++ b/Lab8/Lab8_BNB.ipynb
@@ -747,10 +747,10 @@
     "                    # prune this branch\n",
     "                    continue\n",
     "                \n",
+    "                # feasible solution but it is not integer:\n",
     "\n",
-    "                # Now - generate two children \n",
     "                if branching_policy == 'dfs':\n",
-    "                    # feasible solution but it is not integer\n",
+    "                # default policy - from task description\n",
     "                    var_to_branch_on = None\n",
     "                    for inx in integer_vars_inx: \n",
     "                        if not vars_values[inx].is_integer(): # take first possible variable which should has integer value but doesn't have\n",
@@ -769,7 +769,9 @@
     "                        # add left child at the end, because we want to prioritize left one (this one will be poped from the list earlier)\n",
     "\n",
     "                if branching_policy == 'more_constraints_first':\n",
-    "                    # feasible solution but it is not integer\n",
+    "                # based on dfs, but instead of choosing a variable to split beginning from the leftmost one,\n",
+    "                # we choose the one that is involved in the greatest number of constraints\n",
+    "\n",
     "                    var_to_branch_on = None\n",
     "                    for inx in integer_vars_priority_inx: \n",
     "                        if not vars_values[inx].is_integer(): # take first possible variable which should has integer value but doesn't have\n",
@@ -789,7 +791,8 @@
     "\n",
     "                    \n",
     "                \n",
-    "                if branching_policy == 'smaller_range_first':\n",
+    "                if branching_policy == 'greater_range_first':\n",
+    "                # choose the variable that has the least constrained \n",
     "\n",
     "                    var_to_branch_on = None\n",
     "                    \n",
@@ -823,6 +826,12 @@
     "\n",
     "\n",
     "                if branching_policy == 'equal_split':\n",
+    "                # get the variable that still has range of feasibe values and generate the children\n",
+    "                # splitting the constraint into \"halves\"\n",
+    "                # e.g. if x1 can take values {0,...,8}, then \n",
+    "                # left_child is constrained to take values {0,...,4}\n",
+    "                # and right_child is constrained to take values: {5,...,8}\n",
+    "                \n",
     "                    var_to_branch_on = None\n",
     "                    high, low = None, None\n",
     "                    \n",
